fix padding on mobile for main container

--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -4,6 +4,12 @@
     min-height: 70vh;
 }
 
+@media (max-width: 640px) {
+    .container {
+        padding: 1rem 1rem;
+    }
+}
+
 .title {
     font-size: 2rem;
     font-weight: bold;
